<?xml version="1.0"?>
<package>

  <name>maidbot_tools</name>
  <version>0.1.4</version>

  <description>
    Commands for performing common operations when developing on the robots.
    For help, run `maid -h` and `maid COMMAND -h`.
    Forked from `https://github.com/fetchrobotics/fetch_tools`
  </description>

  <author email="ahenning@fetchrobotics.com">Alex Henning</author>
  <maintainer email="ahenning@fetchrobotics.com">Alex Henning</maintainer>
  <maintainer email="spmaniato@gmail.com">Spyros Maniatopoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-rospkg</build_depend>

  <run_depend>python-argcomplete</run_depend>
  <run_depend>python-catkin-lint</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>sshpass</run_depend>

  <export></export>

</package>
